--- a/config.yml
+++ b/config.yml
@@ -5,12 +5,12 @@
 # to set this configuration file here:
 # http://dev.bukkit.org/bukkit-plugins/adminaid/pages/configuration-file-documentation/
 
-Version: 1.0.0
+Version: 1.0.1
 
 EnableVersionChecker: true
 AutoUpdateConfig: true
 
-Prefix: '&e[<index>] <MM>/<dd>/<yyyy> by <playername>: &f'
+Prefix: '&e[<index>] <MM>/<dd>/<yyyy> by <player>: &f'
 
 LoginMessages:
 - '&6Welcome &c<player>&6!'
@@ -33,6 +33,7 @@ DisableCommand:
   Warn: false
   Info: false
   Rules: false
+  Teleport: false
 
 AutoRecordNotes:
   Bans: true
