Removed teleport command temporarily Fixed conflict between businesscraft and adminaid commands

--- a/plugin.yml
+++ b/plugin.yml
@@ -43,11 +43,7 @@ commands:
     usage: /reply <message>
     aliases: r
   playerinfo:
-    usage: /playerinfo <player>
-    aliases: pinfo
-  teleport:
-    usage: /tp
-    aliases: tp
+    usage: /pinfo <player>
   chatspy:
     usage: /chatspy [on|off]
   staffchat:
